--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The Electro-Plasmic Hydrocephalic Genre-Fiction Generator 2000</title>
+  <title>Fiction Generator</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>The Electro-Plasmic Hydrocephalic Genre-Fiction Generator 2000</h1>
-
-  <div id="story">
-    <p id="story-text">&nbsp;</p>
-    <p id="story-title">&nbsp;</p>
+  <div id="body">
+    <h1>
+      A Working Model
+      of the
+      Electro-Plasmic Hydrocephalic
+      Genre-Fiction Generator
+      2000
+    </h1>
+    <div id="story">
+      <h2>Warming up&#8230;</h2>
+      <p>&nbsp;</p>
+    </div>
+    <div id="button">&nbsp;</div>
+    <hr>
+    <div id="footer">
+      <p>Based on <a href="http://wondermark.com/554/">fiction generator blueprints</a>
+        by <a href="http://wondermark.com/about/">David Malki !</a>.</p>
+      <p>Code <span class="amp">&amp;</span> design
+        by <a href="http://boxofjunk.ws/">Liam Cooke</a>.</p>
+    </div>
   </div>
-
-  <div id="button">GO</div>
-
   <script language="Javascript" type="text/javascript" src="jquery-1.3.2.min.js"></script>
   <script language="Javascript" type="text/javascript" src="magic.js"></script>
 </body>
