Remove safari-specific debug code; reword footer

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <div id="button">&nbsp;</div>
     <hr>
     <div id="footer">
-      <p>Based on <a href="http://wondermark.com/554/">fiction generator blueprints</a>
-        by <a href="http://wondermark.com/about/">David Malki !</a>.</p>
+      <p>Based on the
+        <strong><a href="http://wondermark.com/554/">fiction generator</a></strong>
+        blueprint by <a href="http://wondermark.com/about/">David Malki !</a>.</p>
       <p>Code <span class="amp">&amp;</span> design
         by <a href="http://boxofjunk.ws/">Liam Cooke</a>.</p>
     </div>
