--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Fiction Generator</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css?200909221951">
 </head>
 <body>
   <div id="body">
@@ -22,13 +22,13 @@
     <hr>
     <div id="footer">
       <p>Based on the
-        <strong><a href="http://wondermark.com/554/">fiction generator</a></strong>
-        blueprint by <a href="http://wondermark.com/about/">David Malki !</a>.</p>
+        <strong><a href="http://wondermark.com/554/">Wondermark fiction generator</a></strong>
+        by <a href="http://wondermark.com/about/">David Malki !</a>.</p>
       <p>Code <span class="amp">&amp;</span> design
         by <a href="http://boxofjunk.ws/">Liam Cooke</a>.</p>
     </div>
   </div>
   <script language="Javascript" type="text/javascript" src="jquery-1.3.2.min.js"></script>
-  <script language="Javascript" type="text/javascript" src="magic.js"></script>
+  <script language="Javascript" type="text/javascript" src="magic.js?200909221951"></script>
 </body>
 </html>
