Link to source code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <p>Based on the
         <strong><a href="http://wondermark.com/554/">Wondermark fiction generator</a></strong>
         by <a href="http://wondermark.com/about/">David Malki !</a>.</p>
-      <p>Code <span class="amp">&amp;</span> design
+      <p><a href="http://github.com/inky/fictiongen">Code</a>
+        <span class="amp">&amp;</span> design
         by <a href="http://boxofjunk.ws/">Liam Cooke</a>.</p>
     </div>
   </div>
