Mobile Safari sexupification

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Fiction Generator</title>
-  <link rel="stylesheet" type="text/css" href="style.css?200909222225">
+  <link rel="stylesheet" media="all" href="style.css?20091227_2240">
+  <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css?20091227_2240">
+  <link rel="apple-touch-startup-image" href="images/iphone-startup.jpg">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="width=580">
 </head>
 <body>
   <div id="body">
@@ -27,9 +32,13 @@
       <p><a href="http://github.com/inky/fictiongen">Code</a>
         <span class="amp">&amp;</span> design
         by <a href="http://boxofjunk.ws/">Liam Cooke</a>.</p>
+      <p>Public domain images from
+        <a href="http://www.oldbookillustrations.com/">Old Book Illustrations</a>
+        <span class="amp">&amp;</span>
+        <a href="http://www.fromoldbooks.org/">From Old Books</a>.</p>
     </div>
   </div>
   <script language="Javascript" type="text/javascript" src="jquery-1.3.2.min.js"></script>
-  <script language="Javascript" type="text/javascript" src="magic.js?200909222225"></script>
+  <script language="Javascript" type="text/javascript" src="magic.js?20091227_2240"></script>
 </body>
 </html>
