--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
+<head manifest="fictiongen.manifest">
   <meta charset="utf-8">
-  <title>Fiction Generator</title>
-  <link rel="stylesheet" media="all" href="style.css?20091227_2240">
-  <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css?20091227_2240">
+  <title>Genre-Fiction Generator</title>
+  <link rel="stylesheet" media="all" href="style.css">
+  <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css">
   <link rel="apple-touch-startup-image" href="images/iphone-startup.jpg">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -39,6 +39,6 @@
     </div>
   </div>
   <script language="Javascript" type="text/javascript" src="jquery-1.3.2.min.js"></script>
-  <script language="Javascript" type="text/javascript" src="magic.js?20091227_2240"></script>
+  <script language="Javascript" type="text/javascript" src="magic.js"></script>
 </body>
 </html>
