--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
-<html lang="en">
-<head manifest="fictiongen.manifest">
+<html lang="en" manifest="fictiongen.manifest">
+<head>
   <meta charset="utf-8">
-  <title>Genre-Fiction Generator</title>
+  <title>Fiction Generator</title>
   <link rel="stylesheet" media="all" href="style.css">
   <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="apple-touch-startup-image" href="images/iphone-startup.jpg">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -13,16 +14,12 @@
 <body>
   <div id="body">
     <h1>
-      A Working Model
-      of the
-      Electro-Plasmic Hydrocephalic
-      Genre-Fiction Generator
-      2000
+        A Working Model
+ of the Electro-Plasmic Hydrocephalic
+        Genre-Fiction Generator
+        2000
     </h1>
-    <div id="story">
-      <h2>Warming up&#8230;</h2>
-      <p>&nbsp;</p>
-    </div>
+    <div id="story"></div>
     <div id="button">&nbsp;</div>
     <hr>
     <div id="footer">
@@ -39,6 +36,8 @@
     </div>
   </div>
   <script language="Javascript" type="text/javascript" src="jquery-1.3.2.min.js"></script>
+  <script language="Javascript" type="text/javascript" src="modernizr-1.1.min.js"></script>
+  <script language="Javascript" type="text/javascript" src="json2.min.js"></script>
   <script language="Javascript" type="text/javascript" src="magic.js"></script>
 </body>
 </html>
