--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
         <a href="http://www.fromoldbooks.org/">From Old Books</a>.</p>
     </div>
   </div>
-  <script language="Javascript" type="text/javascript" src="jquery-1.3.2.min.js"></script>
-  <script language="Javascript" type="text/javascript" src="json2.min.js"></script>
-  <script language="Javascript" type="text/javascript" src="magic.js"></script>
+  <script language="Javascript" type="text/javascript" src="fictiongen.js"></script>
 </body>
 </html>
