--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         by <a href="http://wondermark.com/about/">David Malki !</a>.</p>
       <p><a href="http://github.com/inky/fictiongen">Code</a>
         <span class="amp">&amp;</span> design
-        by <a href="http://boxofjunk.ws/">Liam Cooke</a>.</p>
+        by <a href="http://inky.me/">Liam Cooke</a>.</p>
       <p>Public domain images from
         <a href="http://www.oldbookillustrations.com/">Old Book Illustrations</a>
         <span class="amp">&amp;</span>
